<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnsqr"
        android:layout_width="340dp"
        android:layout_height="70dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/roundbtn"
        android:drawableStart="@drawable/icsqr"
        android:drawablePadding="10dp"
        android:includeFontPadding="false"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:text="@string/persegi_panjang"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btntrgl"
        android:layout_width="340dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundbtn1"
        android:drawableStart="@drawable/icsgtg"
        android:drawablePadding="10dp"
        android:includeFontPadding="false"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:text="@string/segitiga"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textIsSelectable="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnsqr" />

    <Button
        android:id="@+id/btncrcle"
        android:layout_width="340dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/roundbtn2"
        android:drawableStart="@drawable/iccrcle"
        android:drawablePadding="10dp"
        android:includeFontPadding="false"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:text="@string/lingkaran"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btntrgl" />
</androidx.constraintlayout.widget.ConstraintLayout>